Guard KCompressionDevice::open being called with no backend available

Summary:
If KArchive is built without support for a compression type, such as
bzip2, d->filter ends up as null.

It is then used in the open call and will crash.

Other calls can still crash, but they shouldn't be being called if open
fails.

BUG: 404240

Reviewers: #plasma, #frameworks, ngraham

Reviewed By: ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D18965